using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class HandCard : MonoBehaviour
{
    public List<Card> HandCards=new List<Card>();
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
